<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="30dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btRewardedVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rewarded_video" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btInterstitial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/interstitial" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btNativeBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/native_banner" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btStandardBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/standard_banner" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btNativeBannerInList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/native_banner_in_list" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btNativeVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/native_video" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btVast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vast" />

</androidx.appcompat.widget.LinearLayoutCompat>